# wg-codex

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: bootstrap-gcp-oidc.yml  bootstrap-infra.yml  ci.yaml  core-vm-cicd.yml  entry-vm-cicd.yml  infra-terraform.yml
clients/windows-desktop/: README.md  package.json
clients/windows-desktop/scripts/: generate-runtime-env.js  run-ps-script.js  stage-wireguard-runtime.ps1  verify-wireguard-runtime.ps1
clients/windows-desktop/src-tauri/: Cargo.toml  tauri.conf.json
clients/windows-desktop/src-tauri/src/: api.rs  auth.rs  main.rs  models.rs  session.rs  storage.rs  storage_windows.rs  wireguard.rs
clients/windows-desktop/ui/: index.html  package.json  tsconfig.json
clients/windows-desktop/ui/src/: api.ts  contracts.ts  index.ts  main.ts  state.ts  styles.css
clients/windows-desktop/wg-tools/: .gitkeep
crates/backend-e2e/: Cargo.toml
crates/backend-e2e/src/: catalog_fixture.rs  http_client.rs  lib.rs  oauth_stub.rs  process.rs
crates/backend-e2e/tests/: backend_oauth_e2e.rs
crates/control-plane/: Cargo.toml  build.rs
crates/control-plane/proto/: vpn_control.proto
crates/control-plane/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
db/migrations/: 202602090001_initial_schema.sql  202602100002_revoked_tokens.sql  202602100003_consumer_model.sql
deploy/env/: core.env.example  entry.env.example
deploy/k8s/: README.md  canary-validate.sh  core-configmap.yaml  core-daemonset.yaml  core-grpc-client-tls-secret.example.yaml  core-secret.example.yaml  core-tls-secret.example.yaml  entry-configmap.yaml  entry-deployment.yaml  entry-secret.example.yaml  migrate-job.yaml  namespace.yaml  preflight.sh  smoke-check.sh  wireguard-keys-secret.example.yaml
deploy/k8s/base/: kustomization.yaml
deploy/k8s/gcp/: core-secretproviderclass.yaml  entry-secretproviderclass.yaml  serviceaccounts.yaml
deploy/k8s/overlays/dev/: dev-secrets.yaml  kustomization.yaml  patch-core-config.yaml  patch-entry-config.yaml
deploy/k8s/overlays/prod/: kustomization.yaml  sealedsecret-core-grpc-client-tls.yaml  sealedsecret-core-tls.yaml  sealedsecret-core.yaml  sealedsecret-entry.yaml  sealedsecret-wireguard-keys.yaml
deploy/k8s/overlays/prod-gcp-sm/: kustomization.yaml  patch-core-csi.yaml  patch-entry-csi.yaml
deploy/k8s/overlays/prod-gcp-sm-native-canary/: kustomization.yaml
deploy/k8s/overlays/prod-native-canary/: kustomization.yaml  patch-core-native-driver.yaml
deploy/startup/: core-startup.sh.tmpl  entry-startup.sh.tmpl
deploy/startup/lib/: common.sh.tmpl
deploy/terraform/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
deploy/terraform/modules/core_vm/: README.md  main.tf  variables.tf
deploy/terraform/modules/entry_vm/: README.md  outputs.tf  variables.tf
deploy/terraform/stacks/bootstrap-infra/: README.md  main.tf  terraform.tfvars.example  variables.tf  versions.tf
deploy/terraform/stacks/bootstrap-oidc/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
deploy/terraform/stacks/core-vm/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
deploy/terraform/stacks/entry-vm/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
deploy/terraform/stacks/tfstate-bucket/: README.md  main.tf  outputs.tf  variables.tf
docs/: architecture-plan.md  db-test-spec.md  deployment-checklist.md  next-session.md  windows-desktop-client-plan.md
docs/superpowers/notes/: terraform-only-vm-deploy-responsibilities.md
docs/superpowers/plans/: 2026-03-20-backend-oauth-e2e.md  2026-03-21-bootstrap-infra.md  2026-03-21-terraform-only-vm-deploy.md
docs/superpowers/specs/: 2026-03-20-backend-oauth-e2e-design.md  2026-03-21-bootstrap-infra-design.md  2026-03-21-terraform-only-vm-deploy-design.md
scripts/: README.md  deploy-backends-k8s.sh  deploy-core-vm.sh  deploy-entry-vm.sh  run-backend-e2e-local.sh  run-backend-e2e.sh  run-db-integration-tests.sh  terraform-init-gcs-backend.sh
services/core/: Cargo.toml  Dockerfile
services/core/src/: dataplane.rs  ip_pool.rs  main.rs  nat_native.rs  wg_uapi.rs
services/entry/: Cargo.toml  Dockerfile
services/entry/src/: device_repo.rs  google_oidc.rs  main.rs  node_catalog.rs  node_repo.rs  oauth_repo.rs  postgres_session_repo.rs  privacy_repo.rs  session_repo.rs  subscription_repo.rs  token_repo.rs
