[package]
name = "core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
native-nft = ["dep:libc", "dep:mnl", "dep:nftnl"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
control-plane = { path = "../../crates/control-plane" }
domain = { path = "../../crates/domain" }
futures-util = "0.3"
ipnet = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rtnetlink = "0.14"
serde_json.workspace = true
tokio.workspace = true
tonic = { version = "0.12", features = ["tls"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
libc = { version = "0.2", optional = true }
mnl = { version = "0.2", optional = true }
nftnl = { version = "0.7", optional = true }
